sounds for animations

--- a/calculatorsecretbeta.html
+++ b/calculatorsecretbeta.html
@@ -49,7 +49,7 @@
 
 </div>
 <div id="pagetitle" style="background-color:#df9440">
-<img id="homebutton" class="hometrans" src="assets/kneesmalllogo.png" width="40" height="40"/><h1>Melee Calculator</h1><div id="tutorialbutton" class="tutorialbuttondefault"><div id="tutorialicon"></div><p>Tutorial</p></div><p id="credits">by Schmoo and GentleFox  v1.9.beta</p><div id="titlebarButtons"><a href="donate.html"><div id="donatebutton" class="donatebuttondefault"><div id="dollarbox"><p>$</p></div><p>Donate</p></div></a><div id="versionButtonContainer"><div id="NTSCButton" class="verButton verButtonOn"><p>NTSC</p></div><div id="PALButton" class="verButton"><p>PAL</p></div></div></div>
+<img id="homebutton" class="hometrans" src="assets/kneesmalllogo.png" width="40" height="40"/><div id="mctitle"><div id="mctitletop"><h1>Melee Calculator</h1></div><div id="mctitlebottom"><p id="credits">by Schmoo and GentleFox  v2.0 BETA</p></div></div><div id="tutorialbutton" class="tutorialbuttondefault"><div id="tutorialicon"></div><p>Tutorial</p></div><div id="titlebarButtons"><a href="donate.html"><div id="donatebutton" class="donatebuttondefault"><div id="dollarbox"><p>$</p></div><p>Donate</p></div></a><div id="volumeContainer"><div id="soundicon"></div><div id="volumeLevel"><p>5</p></div><div id="volumeButtonContainer"><div class="volumeButton volumeUp"><p>+</p></div><div class="volumeButton volumeDown"><p>-</p></div></div></div><div id="versionButtonContainer"><div id="NTSCButton" class="verButton verButtonOn"><p>NTSC</p></div><div id="PALButton" class="verButton"><p>PAL</p></div></div></div>
 
 </div><div id="main">
 <div id="lcontrols"><div id="attackertitle"><p>ATTACKER</p></div><div id="attackscroll"><div id="Fx" class="character"><div class="expandcharacter expandfalse"></div><p>Fox</p></div>
@@ -146,7 +146,7 @@
 			<div class="hbcharselect hbcon"><p>Sheik</p></div>
 			<div class="hbcharselect hbcon"><p>Puff</p></div>
 			<div class="hbcharselect hbcon"><p>Peach</p></div>
-			<div class="hbcharselect hbcon"><p>ICs</p></div>
+			<div class="hbcharselect hbcon" style="width:70px"><p>Popo</p></div><div class="hbcharselect hbcon" style="width:70px"><p>Nana</p></div>
 			<div class="hbcharselect hbcon"><p>Falcon</p></div>
 			<div class="hbcharselect hbcon"><p>Pika</p></div>
 			<div class="hbcharselect hbcon"><p>Samus</p></div>
