trajPosInfo margin fix, 2nd sdi input

--- a/calculatorsecretbeta.html
+++ b/calculatorsecretbeta.html
@@ -102,14 +102,22 @@
 		<div id="tdiUser"><div id="tdiUTrans"></div><div id="tdiUSolid"></div></div>
 		<svg version="1.1" id="tdiSvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="130px" height="130px" viewBox="0 0 161 161" enable-background="new 0 0 161 161" xml:space="preserve" style="position:absolute;display:inline-block;">
 			<circle id="tdiSvgPointer" cx="81" cy="81" r="5" fill="#59e6ff"></svg></div><div id="tdiButtons"><div id="tdiClock" class="diTurn"></div><div id="tdiCentre" class="diCentre"></div><div id="tdiAnti" class="diTurn"></div></div><div id="tdiButtonsP"><div id="tdiUp" class="diUp diPrecise"></div><div id="tdiDown" class="diDown diPrecise"></div><div id="tdiCentre" class="diCentre"></div><div id="tdiLeft" class="diLeft diPrecise"></div><div id="tdiRight" class="diRight diPrecise"></div></div><div id="tdiValues"><p>X:<span id="tdiXInput">0.00000</span> Y:<span id="tdiYInput">0.00000</span></p><p><span id="tdiDiAngle">0</span>° Strength: <span id="tdiOffsetPercent">0</span>%</div></div>
-		<div id="sdiBox"><div id="sdiTitle"><p>SDI</p></div><div id="sdiSwitch" class="diSwitch"><p>Simple</p></div><div id="sdiSelector" class="diSelector"><div class="trajFreeze diFreeze freezeOff"></div>
-			<div id="sdiCircle"></div>
-			<div id="sdiXDeadzone"></div>
-			<div id="sdiYDeadzone"></div>
-			<div id="sdiUserCentre"></div>
-			<div id="sdiUser"><div id="sdiUTrans"></div><div id="sdiUSolid"></div></div>
-			<svg version="1.1" id="sdiSvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="130px" height="130px" viewBox="0 0 161 161" enable-background="new 0 0 161 161" xml:space="preserve" style="position:absolute;display:inline-block;">
-				<circle id="sdiSvgPointer" cx="81" cy="81" r="5" fill="#59e6ff"></svg></div><div id="sdiButtons"><div id="sdiClock" class="diTurn"></div><div id="sdiCentre" class="diCentre"></div><div id="sdiAnti" class="diTurn"></div></div><div id="sdiButtonsP"><div id="sdiUp" class="diUp diPrecise"></div><div id="sdiDown" class="diDown diPrecise"></div><div id="sdiCentre" class="diCentre"></div><div id="sdiLeft" class="diLeft diPrecise"></div><div id="sdiRight" class="diRight diPrecise"></div></div><div id="sdiValues"><p>X:<span id="sdiXInput">0.00000</span> Y:<span id="sdiYInput">0.00000</span></p><p style="text-align:center"><span id="sdiDiAngle">0</span>°</div></div>
+        <div id="sdiBox"><div id="sdiTitle"><p>SDI</p><div class="sdiNum" id="sdiNum1"><p>1</p></div></div><div id="sdiSwitch" class="diSwitch"><p>Simple</p></div><div id="sdiSelector" class="diSelector"><div class="trajFreeze diFreeze freezeOff"></div>
+    			<div id="sdiCircle"></div>
+    			<div id="sdiXDeadzone"></div>
+    			<div id="sdiYDeadzone"></div>
+    			<div id="sdiUserCentre"></div>
+    			<div id="sdiUser"><div id="sdiUTrans"></div><div id="sdiUSolid"></div></div>
+    			<svg version="1.1" id="sdiSvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="130px" height="130px" viewBox="0 0 161 161" enable-background="new 0 0 161 161" xml:space="preserve" style="position:absolute;display:inline-block;">
+    				<circle id="sdiSvgPointer" cx="81" cy="81" r="5" fill="#59e6ff"></svg></div><div id="sdiButtons"><div id="sdiClock" class="diTurn"></div><div id="sdiCentre" class="diCentre"></div><div id="sdiAnti" class="diTurn"></div></div><div id="sdiButtonsP"><div id="sdiUp" class="diUp diPrecise"></div><div id="sdiDown" class="diDown diPrecise"></div><div id="sdiCentre" class="diCentre"></div><div id="sdiLeft" class="diLeft diPrecise"></div><div id="sdiRight" class="diRight diPrecise"></div></div><div id="sdiValues"><p>X:<span id="sdiXInput">0.00000</span> Y:<span id="sdiYInput">0.00000</span></p><p style="text-align:center"><span id="sdiDiAngle">0</span>°</div></div>
+        <div id="zdiBox"><div id="zdiTitle"><p>SDI</p><div class="sdiNum" id="sdiNum2"><p>2</p></div></div><div id="zdiSwitch" class="diSwitch"><p>Simple</p></div><div id="zdiSelector" class="diSelector"><div class="trajFreeze diFreeze freezeOff"></div>
+        	<div id="zdiCircle"></div>
+        	<div id="zdiXDeadzone"></div>
+      		<div id="zdiYDeadzone"></div>
+    			<div id="zdiUserCentre"></div>
+    			<div id="zdiUser"><div id="zdiUTrans"></div><div id="zdiUSolid"></div></div>
+    			<svg version="1.1" id="zdiSvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="130px" height="130px" viewBox="0 0 161 161" enable-background="new 0 0 161 161" xml:space="preserve" style="position:absolute;display:inline-block;">
+      			<circle id="zdiSvgPointer" cx="81" cy="81" r="5" fill="#59e6ff"></svg></div><div id="zdiButtons"><div id="zdiClock" class="diTurn"></div><div id="zdiCentre" class="diCentre"></div><div id="zdiAnti" class="diTurn"></div></div><div id="zdiButtonsP"><div id="zdiUp" class="diUp diPrecise"></div><div id="zdiDown" class="diDown diPrecise"></div><div id="zdiCentre" class="diCentre"></div><div id="zdiLeft" class="diLeft diPrecise"></div><div id="zdiRight" class="diRight diPrecise"></div></div><div id="zdiValues"><p>X:<span id="zdiXInput">0.00000</span> Y:<span id="zdiYInput">0.00000</span></p><p style="text-align:center"><span id="zdiDiAngle">0</span>°</div></div>
 			<div id="adiBox"><div id="adiTitle"><p>ASDI</p></div><div id="adiSwitch" class="diSwitch"><p>Simple</p></div><div id="adiSelector" class="diSelector"><div class="trajFreeze diFreeze freezeOff"></div>
 				<div id="adiCircle"></div>
 				<div id="adiXDeadzone"></div>
