--- a/donate.html
+++ b/donate.html
@@ -26,15 +26,15 @@
 			<img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
 		</form>
 		<div>
-      <p><img src="assets/bitcoinicon.png" style="margin-right:10px"><span style="font-size:12px">3CZzEPp5d2xf8NpgK8nJXDTqd9vZgRTPgU</span></p>
+      <!--<p><img src="assets/bitcoinicon.png" style="margin-right:10px"><span style="font-size:12px">3CZzEPp5d2xf8NpgK8nJXDTqd9vZgRTPgU</span></p>-->
 			<p><br>Donations will:</p>
 			<ul>
 				<li>Give you access to beta builds of new features (3$ or more)</li>
     		<li>Drive the site and brand forward</li>
-				<li>Potentially allow the site to become ad free</li>
+				<li>Make you a total homie</li>
 			</ul>
 			<p><span style="font-size:15px">Site suggestions made by donaters will be taken very seriously and I will discuss them with you.</span></p>
-			<p><span style="font-size:12px"><br>For benefits: Please provide preferred contact details in donation message, otherwise paypal associated email address will be used. If using bitcoin, use a memo if possible, or send me a PM with proof of transaction.</span></p>
+			<p><span style="font-size:12px"><br>For beta access: Please provide preferred contact details in donation message, otherwise paypal associated email address will be used.</span></p>
 			<p><br>Thank You!<br></p>
 		</div>
 	</div>
