browser zoom width fix

--- a/calculator.html
+++ b/calculator.html
@@ -34,7 +34,7 @@
 <title>I KneeData | For your frame data kneeds</title>
 </head>
 
-<body>
+<body><div id="widthTester"></div>
 <div id="header">
 	<a href="http://ikneedata.com"><img id="logo" src="assets/kneesmalllogo.png" width="40" height="40" alt=""/></a>
     <a href="http://ikneedata.com"><img id="titlelogo" src="assets/ikneedatav5.png"/ width="280" height="60"></a>
