--- a/meleelitebeta.html
+++ b/meleelitebeta.html
@@ -2,22 +2,22 @@
 <html>
   <head>
     <script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-    <!--<script src="animations.js" type="text/javascript"></script>
-    <script src="vfx.js" type="text/javascript"></script>
-    <script src="hitDetection.js" type="text/javascript"></script>
-    <script src="characters.js" type="text/javascript"></script>
-    <script src="player.js" type="text/javascript"></script>
-    <script src="actionStates.js" type="text/javascript"></script>
-    <script src="fighter.js" type="text/javascript"></script>-->
-    <script src="main.min.js" type="text/javascript"></script>
+    <script src="animationsArray2.js" type="text/javascript"></script>
+    <script src="main.min.js" type="text/javascript"></script>-->
     <link href="fighter.min.css" rel="stylesheet"/>
   </head>
   <body>
     <div id="display">
+    <canvas id="gameCanvas" width="1200" height ="750"></canvas>
+    <div id="debug">
+      <div id="renderingTime"><p>Rendering: avg: <span id="renderAvg">0</span>ms | high: <span id="renderHigh">0</span>ms | low :<span id="renderLow">0</span>ms | PeakCount: <span id="renderPeak">0</span></p></div>
+      <div id="gamelogicTime"><p>GameLogic: avg: <span id="gamelogicAvg">0</span>ms | high: <span id="gamelogicHigh">0</span>ms | low :<span id="gamelogicLow">0</span>ms | PeakCount: <span id="gamelogicPeak">0</span></p></div>
+      <div id="framerate"><p>Framerate: cur: <span id="framerateCurrent">0</span>fps | high : <span id="framerateHigh">0</span>fps | low : <span id="framerateLow">0</span>fps</p></div>
+    </div>
     <div id="matchTimer"><p><span id="matchMinutes">99</span>:<span id="matchSeconds">59.99</span></p></div>
-    <svg version="1.1" id="gameSvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1200px" height="750px" viewBox="0 0 1200 750" enable-background="new 0 0 1200 750" xml:space="preserve"></svg>
     <div id="stockPercentContainer">
       <div id="sP0" class="stockPercent">
+        <div id="resetIndicator0" class="resetIndicator"><p>RESET!</p></div>
         <div id="stockContainer0" class="stockContainer">
           <div class="stock 0stock" id="0stock1"></div><div class="stock 0stock" id="0stock2"></div><div class="stock 0stock" id="0stock3"></div><div class="stock 0stock" id="0stock4"></div>
         </div>
@@ -25,6 +25,7 @@
           <p class="percent"><span id="percent0">999</span>%</p>
         </div>
       </div><div id="sP1" class="stockPercent">
+        <div id="resetIndicator1" class="resetIndicator"><p>RESET!</p></div>
         <div id="stockContainer1" class="stockContainer">
           <div class="stock 1stock" id="1stock1"></div><div class="stock 1stock" id="1stock2"></div><div class="stock 1stock" id="1stock3"></div><div class="stock 1stock" id="1stock4"></div>
         </div>
@@ -32,6 +33,7 @@
           <p class="percent"><span id="percent1">0</span>%</p>
         </div>
       </div><div id="sP2" class="stockPercent">
+        <div id="resetIndicator2" class="resetIndicator"><p>RESET!</p></div>
         <div id="stockContainer2" class="stockContainer">
           <div class="stock 2stock" id="2stock1"></div><div class="stock 2stock" id="2stock2"></div><div class="stock 2stock" id="2stock3"></div><div class="stock 2stock" id="2stock4"></div>
         </div>
@@ -39,6 +41,7 @@
           <p class="percent"><span id="percent2">0</span>%</p>
         </div>
       </div><div id="sP3" class="stockPercent">
+        <div id="resetIndicator3" class="resetIndicator"><p>RESET!</p></div>
         <div id="stockContainer3" class="stockContainer">
           <div class="stock 3stock" id="3stock1"></div><div class="stock 3stock" id="3stock2"></div><div class="stock 3stock" id="3stock3"></div><div class="stock 3stock" id="3stock4"></div>
         </div>
@@ -47,47 +50,48 @@
         </div>
       </div>
     </div>
+    <div id="buttons"><div id="effectsButton" class="button"><p>VFX <span id="effectsButtonEdit">ON</span></p></div><div id="debugButton" class="button"><p>DEBUG <span id="debugButtonEdit">OFF</span></p></div></div>
     <div id="playerFind">
       <div id="currentPlayers"></div>
-      <div id="pFindDetails"><p>Press A to Join<br><br>Press X/Y to Change Colour<br><br>Press Start to Enter Battle</p></div>
+      <div id="pFindDetails"><p>Press A to Join<br><br>Press X/Y to Change Colour<br><br>Press B to Toggle Tag<br><br>Press Z to Add CPU<br><br>Press Start to Enter Battle<br><br><br><span style="font-size:14px">Hold DpadUp + X + Y for 3 seconds when in game to reset controller (for trigger tricking)<br>Press DpadLeft to Toggle LedgeGrabBox<br>Press DpadDown to Toggle ECB<br>Press DpadRight to Toggle Hitboxes</span></p></div>
     </div>
 
   </div>
     <div id="players">
     <div class="playerDetails">
       <div class="playerTitle"><p>Player 1</p></div>
-      <div class="inputs"><p>X: <span id="lsAxisX0">0</span></p></div><div class="inputs"><p>Y: <span id="lsAxisY0">0</span></p></div><div class="inputs"><p>L: <span id="lAnalog0">0</span></p></div><div class="inputs"><p>R: <span id="rAnalog0">0</span></p></div>
+      <div class="inputs"><p>Lstick</p></div><div class="inputs"><p>X: <span id="lsAxisX0">0</span></p></div><div class="inputs"><p>Y: <span id="lsAxisY0">0</span></p></div><div class="inputs"><p>Shoulders</p></div><div class="inputs"><p>L: <span id="lAnalog0">0</span></p></div><div class="inputs"><p>R: <span id="rAnalog0">0</span></p></div>
       <div class="actionstatetext"><p><span id="actState0">??</span> <span id="stateNum0">?</span> <span id="face0">1</span></p></div>
-      <div class="velocities"><p>X: <span id="velocityX0">0</span></p></div><div class="velocities"><p>Y: <span id="velocityY0">0</span></p></div>
-      <div class="velocities"><p>X: <span id="kvelocityX0">0</span></p></div><div class="velocities"><p>Y: <span id="kvelocityY0">0</span></p></div>
-      <div class="velocities"><p>X: <span id="pvelocityX0">0</span></p></div><div class="velocities"><p>Y: <span id="pvelocityY0">0</span></p></div>
+      <div class="velocities"><p>CharVel</p></div><div class="velocities"><p>X: <span id="velocityX0">0</span></p></div><div class="velocities"><p>Y: <span id="velocityY0">0</span></p></div>
+      <div class="velocities"><p>KBVel</p></div><div class="velocities"><p>X: <span id="kvelocityX0">0</span></p></div><div class="velocities"><p>Y: <span id="kvelocityY0">0</span></p></div>
+      <div class="velocities"><p>Position</p></div><div class="velocities"><p>X: <span id="pvelocityX0">0</span></p></div><div class="velocities"><p>Y: <span id="pvelocityY0">0</span></p></div>
       <div class="buttons"><div class="b"><div id="0button0"></div><p>0</p></div><div class="b"><div id="0button1"></div><p>1</p></div><div class="b"><div id="0button2"></div><p>2</p></div><div class="b"><div id="0button3"></div><p>3</p></div><div class="b"><div id="0button4"></div><p>4</p></div><div class="b"><div id="0button5"></div><p>5</p></div><div class="b"><div id="0button7"></div><p>7</p></div><div class="b"><div id="0button9"></div><p>9</p></div><div class="b"><div id="0button12"></div><p>12</p></div><div class="b"><div id="0button13"></div><p>13</p></div><div class="b"><div id="0button14"></div><p>14</p></div><div class="b"><div id="0button15"></div><p>15</p></div></div>
     </div>
     <div class="playerDetails">
       <div class="playerTitle"><p>Player 2</p></div>
-      <div class="inputs"><p>X: <span id="lsAxisX1">0</span></p></div><div class="inputs"><p>Y: <span id="lsAxisY1">0</span></p></div><div class="inputs"><p>L: <span id="lAnalog1">0</span></p></div><div class="inputs"><p>R: <span id="rAnalog1">0</span></p></div>
+      <div class="inputs"><p>Lstick</p></div><div class="inputs"><p>X: <span id="lsAxisX1">0</span></p></div><div class="inputs"><p>Y: <span id="lsAxisY1">0</span></p></div><div class="inputs"><p>Shoulders</p></div><div class="inputs"><p>L: <span id="lAnalog1">0</span></p></div><div class="inputs"><p>R: <span id="rAnalog1">0</span></p></div>
       <div class="actionstatetext"><p><span id="actState1">??</span> <span id="stateNum1">?</span> <span id="face1">1</span></p></div>
-      <div class="velocities"><p>X: <span id="velocityX1">0</span></p></div><div class="velocities"><p>Y: <span id="velocityY1">0</span></p></div>
-      <div class="velocities"><p>X: <span id="kvelocityX1">0</span></p></div><div class="velocities"><p>Y: <span id="kvelocityY1">0</span></p></div>
-      <div class="velocities"><p>X: <span id="pvelocityX1">0</span></p></div><div class="velocities"><p>Y: <span id="pvelocityY1">0</span></p></div>
+      <div class="velocities"><p>CharVel</p></div><div class="velocities"><p>X: <span id="velocityX1">0</span></p></div><div class="velocities"><p>Y: <span id="velocityY1">0</span></p></div>
+      <div class="velocities"><p>KBVel</p></div><div class="velocities"><p>X: <span id="kvelocityX1">0</span></p></div><div class="velocities"><p>Y: <span id="kvelocityY1">0</span></p></div>
+      <div class="velocities"><p>Position</p></div><div class="velocities"><p>X: <span id="pvelocityX1">0</span></p></div><div class="velocities"><p>Y: <span id="pvelocityY1">0</span></p></div>
       <div class="buttons"><div class="b"><div id="1button0"></div><p>0</p></div><div class="b"><div id="1button1"></div><p>1</p></div><div class="b"><div id="1button2"></div><p>2</p></div><div class="b"><div id="1button3"></div><p>3</p></div><div class="b"><div id="1button4"></div><p>4</p></div><div class="b"><div id="1button5"></div><p>5</p></div><div class="b"><div id="1button7"></div><p>7</p></div><div class="b"><div id="1button9"></div><p>9</p></div><div class="b"><div id="1button12"></div><p>12</p></div><div class="b"><div id="1button13"></div><p>13</p></div><div class="b"><div id="1button14"></div><p>14</p></div><div class="b"><div id="1button15"></div><p>15</p></div></div>
     </div>
     <div class="playerDetails">
       <div class="playerTitle"><p>Player 3</p></div>
-      <div class="inputs"><p>X: <span id="lsAxisX2">0</span></p></div><div class="inputs"><p>Y: <span id="lsAxisY2">0</span></p></div><div class="inputs"><p>L: <span id="lAnalog2">0</span></p></div><div class="inputs"><p>R: <span id="rAnalog2">0</span></p></div>
+      <div class="inputs"><p>Lstick</p></div><div class="inputs"><p>X: <span id="lsAxisX2">0</span></p></div><div class="inputs"><p>Y: <span id="lsAxisY2">0</span></p></div><div class="inputs"><p>Shoulders</p></div><div class="inputs"><p>L: <span id="lAnalog2">0</span></p></div><div class="inputs"><p>R: <span id="rAnalog2">0</span></p></div>
       <div class="actionstatetext"><p><span id="actState2">??</span> <span id="stateNum2">?</span> <span id="face2">1</span></p></div>
-      <div class="velocities"><p>X: <span id="velocityX2">0</span></p></div><div class="velocities"><p>Y: <span id="velocityY2">0</span></p></div>
-      <div class="velocities"><p>X: <span id="kvelocityX2">0</span></p></div><div class="velocities"><p>Y: <span id="kvelocityY2">0</span></p></div>
-      <div class="velocities"><p>X: <span id="pvelocityX2">0</span></p></div><div class="velocities"><p>Y: <span id="pvelocityY2">0</span></p></div>
+      <div class="velocities"><p>CharVel</p></div><div class="velocities"><p>X: <span id="velocityX2">0</span></p></div><div class="velocities"><p>Y: <span id="velocityY2">0</span></p></div>
+      <div class="velocities"><p>KBVel</p></div><div class="velocities"><p>X: <span id="kvelocityX2">0</span></p></div><div class="velocities"><p>Y: <span id="kvelocityY2">0</span></p></div>
+      <div class="velocities"><p>Position</p></div><div class="velocities"><p>X: <span id="pvelocityX2">0</span></p></div><div class="velocities"><p>Y: <span id="pvelocityY2">0</span></p></div>
       <div class="buttons"><div class="b"><div id="2button0"></div><p>0</p></div><div class="b"><div id="2button1"></div><p>1</p></div><div class="b"><div id="2button2"></div><p>2</p></div><div class="b"><div id="2button3"></div><p>3</p></div><div class="b"><div id="2button4"></div><p>4</p></div><div class="b"><div id="2button5"></div><p>5</p></div><div class="b"><div id="2button7"></div><p>7</p></div><div class="b"><div id="2button9"></div><p>9</p></div><div class="b"><div id="2button12"></div><p>12</p></div><div class="b"><div id="2button13"></div><p>13</p></div><div class="b"><div id="2button14"></div><p>14</p></div><div class="b"><div id="2button15"></div><p>15</p></div></div>
     </div>
     <div class="playerDetails">
       <div class="playerTitle"><p>Player 4</p></div>
-      <div class="inputs"><p>X: <span id="lsAxisX3">0</span></p></div><div class="inputs"><p>Y: <span id="lsAxisY3">0</span></p></div><div class="inputs"><p>L: <span id="lAnalog3">0</span></p></div><div class="inputs"><p>R: <span id="rAnalog3">0</span></p></div>
+      <div class="inputs"><p>Lstick</p></div><div class="inputs"><p>X: <span id="lsAxisX3">0</span></p></div><div class="inputs"><p>Y: <span id="lsAxisY3">0</span></p></div><div class="inputs"><p>Shoulders</p></div><div class="inputs"><p>L: <span id="lAnalog3">0</span></p></div><div class="inputs"><p>R: <span id="rAnalog3">0</span></p></div>
       <div class="actionstatetext"><p><span id="actState3">??</span> <span id="stateNum3">?</span> <span id="face3">1</span></p></div>
-      <div class="velocities"><p>X: <span id="velocityX3">0</span></p></div><div class="velocities"><p>Y: <span id="velocityY3">0</span></p></div>
-      <div class="velocities"><p>X: <span id="kvelocityX3">0</span></p></div><div class="velocities"><p>Y: <span id="kvelocityY3">0</span></p></div>
-      <div class="velocities"><p>X: <span id="pvelocityX3">0</span></p></div><div class="velocities"><p>Y: <span id="pvelocityY3">0</span></p></div>
+      <div class="velocities"><p>CharVel</p></div><div class="velocities"><p>X: <span id="velocityX3">0</span></p></div><div class="velocities"><p>Y: <span id="velocityY3">0</span></p></div>
+      <div class="velocities"><p>KBVel</p></div><div class="velocities"><p>X: <span id="kvelocityX3">0</span></p></div><div class="velocities"><p>Y: <span id="kvelocityY3">0</span></p></div>
+      <div class="velocities"><p>Position</p></div><div class="velocities"><p>X: <span id="pvelocityX3">0</span></p></div><div class="velocities"><p>Y: <span id="pvelocityY3">0</span></p></div>
       <div class="buttons"><div class="b"><div id="3button0"></div><p>0</p></div><div class="b"><div id="3button1"></div><p>1</p></div><div class="b"><div id="3button2"></div><p>2</p></div><div class="b"><div id="3button3"></div><p>3</p></div><div class="b"><div id="3button4"></div><p>4</p></div><div class="b"><div id="3button5"></div><p>5</p></div><div class="b"><div id="3button7"></div><p>7</p></div><div class="b"><div id="3button9"></div><p>9</p></div><div class="b"><div id="3button12"></div><p>12</p></div><div class="b"><div id="3button13"></div><p>13</p></div><div class="b"><div id="3button14"></div><p>14</p></div><div class="b"><div id="3button15"></div><p>15</p></div></div>
     </div>
   </div>
