--- a/meleelitebeta.html
+++ b/meleelitebeta.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="jquery-1.11.3.min.js" type="text/javascript"></script>
+    <script src="howler.min.js" type="text/javascript"></script>
     <script src="animationsArray2.js" type="text/javascript"></script>
     <script src="main.min.js" type="text/javascript"></script>
     <link href="fighter.min.css" rel="stylesheet"/>
@@ -52,7 +53,13 @@
       </div>
     </div>
     <div id="buttons"><div id="effectsButton" class="button"><p>VFX <span id="effectsButtonEdit">ON</span></p></div><div id="debugButton" class="button"><p>DEBUG <span id="debugButtonEdit">OFF</span></p></div></div>
+    <!--<div id="playerFind">
+      <div id="currentPlayers"></div>
+      <div id="pFindDetails"><p>Press A to Join<br><br>Press X/Y to Change Colour<br><br>Press B to Toggle Tag<br><br>Press Z to Add CPU<br><br>Press Start to Enter Battle<br><br><br><span style="font-size:14px">Hold DpadUp + X + Y for 3 seconds when in game to reset controller (for trigger tricking)<br>Press DpadLeft to Toggle LedgeGrabBox<br>Press DpadDown to Toggle ECB<br>Press DpadRight to Toggle Hitboxes</span></p></div>
+    </div>-->
+
   </div>
+      <div id="keyboardButton"><p>Show Keyboard Controls</p><img id="keyboardControlsImg" src="keyboardcontrols.png"/></div>
     <div id="players">
     <div class="playerDetails">
       <div class="playerTitle"><p>Player 1</p></div>
