--- a/meleelitebeta.html
+++ b/meleelitebeta.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-    <script src="howler.js" type="text/javascript"></script>
+    <script src="howler.min.js" type="text/javascript"></script>
     <script src="animationsArray2.js" type="text/javascript"></script>
     <script src="main.min.js" type="text/javascript"></script>
     <link href="fighter.min.css" rel="stylesheet"/>
