--- a/meleelitebeta.html
+++ b/meleelitebeta.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="jquery-1.11.3.min.js" type="text/javascript"></script>
-    <script src="howler.js" type="text/javascript"></script>
+    <script src="howler.min.js" type="text/javascript"></script>
     <script src="marthanimations.js" type="text/javascript"></script>
     <script src="ecbmarth.js" type="text/javascript"></script>
     <script src="puffanimations4.js" type="text/javascript"></script>
