--- a/input.html
+++ b/input.html
@@ -7,7 +7,7 @@
 <link href="input.css" rel="stylesheet" type="text/css"></head>
 <body style="background-color:#1d4054">
 <div id="promptContainer">
-  <div id="promptText"><p id="promptTextEdit">Push Right Button</p></div>
+  <div id="promptText"><p id="promptTextEdit">Push Right Button</p><br><p>Esc to Cancel</p></div>
 </div>
 <div id="bigMain">
   <div id="setTypeContainer">
