input tester update

--- a/input.html
+++ b/input.html
@@ -21,6 +21,18 @@
       <div id="buttondown" class="button"></div>
       <div id="buttonright" class="button"></div>
     </div>
+    <div id="resultInfo">
+        <div class="resultInfoTitle"><p>SDI</p></div>
+        <div id="sdiAmount"><p>X: <span id="sdiXEdit">0</span> | Y: <span id="sdiYEdit">0</span></p></div>
+        <div class="resultInfoTitle"><p>Distance</p></div>
+        <div id="distAmount"><p>X: <span id="distXEdit">0 Mm</span> | Y: <span id="distYEdit">0 Mm</span></p></div>
+        <div class="resultInfoTitle" id="bigTitle"><p>Time from first input to last sdi</p></div>
+        <div class="resultInfoTitle" id="smallTitle"><p id="properTimer">0</p></div>
+        <div class="resultInfoTitle" id="bigTitle"><p>Time from first to last input</p></div>
+        <div class="resultInfoTitle" id="smallTitle"><p id="firstInputTimer">0</p></div>
+        <div class="resultInfoTitle" id="smallTitle"><p>Total</p></div>
+        <div class="resultInfoTitle" id="smallTitle"><p id="totalTimer">0</p></div>
+    </div>
     <div id="analogContainer">
       <div id="analog">
         <div id="analogCircle"></div>
