more input tester updates

--- a/input.html
+++ b/input.html
@@ -23,6 +23,7 @@
     </div>
     <div id="resultInfo">
         <div class="resultInfoTitle"><p>SDI</p></div>
+        <div id="sdiInputAmount"><p id="sdiInputEdit">0</p></div>
         <div id="sdiAmount"><p>X: <span id="sdiXEdit">0</span> | Y: <span id="sdiYEdit">0</span></p></div>
         <div class="resultInfoTitle"><p>Distance</p></div>
         <div id="distAmount"><p>X: <span id="distXEdit">0 Mm</span> | Y: <span id="distYEdit">0 Mm</span></p></div>
