--- a/donate.html
+++ b/donate.html
@@ -20,16 +20,16 @@
 	<div id="donationright">
 		<br>
 		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-			<input type="hidden" name="cmd" value="_s-xclick">
-			<input type="hidden" name="hosted_button_id" value="TEFU9B5VPDWKU">
-			<input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal – The safer, easier way to pay online.">
-			<img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+		<input type="hidden" name="cmd" value="_s-xclick">
+		<input type="hidden" name="hosted_button_id" value="NKFQXQUC5JKK8">
+		<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+		<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 		</form>
 		<div>
       <!--<p><img src="assets/bitcoinicon.png" style="margin-right:10px"><span style="font-size:12px">3CZzEPp5d2xf8NpgK8nJXDTqd9vZgRTPgU</span></p>-->
 			<p><br>Donations will:</p>
 			<ul>
-				<li>Give you access to beta builds of new features (3$ or more)</li>
+				<li>Help pay for server costs</li>
     		<li>Drive the site and brand forward</li>
 				<li>Make you a total homie</li>
 			</ul>
