--- a/donate.html
+++ b/donate.html
@@ -20,21 +20,13 @@
 	<div id="donationright">
 		<br>
 		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-		<input type="hidden" name="cmd" value="_s-xclick">
-		<input type="hidden" name="hosted_button_id" value="NKFQXQUC5JKK8">
-		<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-		<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+			<input type="hidden" name="cmd" value="_s-xclick" />
+			<input type="hidden" name="hosted_button_id" value="TEFU9B5VPDWKU" />
+			<input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+			<img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1" />
 		</form>
 		<div>
-      <!--<p><img src="assets/bitcoinicon.png" style="margin-right:10px"><span style="font-size:12px">3CZzEPp5d2xf8NpgK8nJXDTqd9vZgRTPgU</span></p>-->
-			<p><br>Donations will:</p>
-			<ul>
-				<li>Help pay for server costs</li>
-    		<li>Drive the site and brand forward</li>
-				<li>Make you a total homie</li>
-			</ul>
-			<p><span style="font-size:15px">Site suggestions made by donaters will be taken very seriously and I will discuss them with you.</span></p>
-			<p><span style="font-size:12px"><br>For beta access: Please provide preferred contact details in donation message, otherwise paypal associated email address will be used.</span></p>
+			<p>I work on many games influenced by melee, some of which are <span style="color:#00ffff"><a style="color:#00ffff" href="http://twitter.com/schmooblidon">soon to be announced.</a></span> Donations will help get these games to release</p>
 			<p><br>Thank You!<br></p>
 		</div>
 	</div>
