thing for niece update

--- a/ruby/index.html
+++ b/ruby/index.html
@@ -10,7 +10,7 @@
         <meta charset="utf-8"/>
 
         <!-- Set the title bar of the page -->
-        <title>Created with GameMaker: Studio</title>
+        <title>Happy Birthday Ruby!</title>
 
         <!-- Set the background colour of the document -->
         <style>
@@ -79,7 +79,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/Ruby.js?TVBYB=66787332"></script>
+        <script type="text/javascript" src="html5game/Ruby.js?AMSZB=151155052"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
